<resources>

    <string name="app_name">마포미</string>

    <string name="kakao_native_key">kakaoe9c2a8bf10ae12652fdc9ee9059ac02f</string>

    <string name="app_intro">서비스 한 줄 소개 생각해주세요</string>
    <string name="str_login_kakao">카카오로 시작하기</string>
    <string name="str_welcome">로그인에 성공했어요</string>

    <string name="str_ask_info">추가 정보를 입력해주세요</string>
    <string name="str_register_type">가입 유형</string>
    <string name="str_nickname">닉네임</string>
    <string name="str_nickname_hint">닉네임 입력</string>
    <string name="str_nickname_valid">사용가능한 닉네임입니다.</string>
    <string name="str_nickname_invalid">중복되는 닉네임입니다.</string>
    <string name="str_phone">휴대폰 전화번호</string>
    <string name="str_phone_hint">휴대폰 전화번호 11자리 입력</string>
    <string name="str_service_terms">서비스 약관 동의</string>
    <string name="str_accept_all">모두 동의 (선택 정보 포함)</string>

    <string name="str_accompany">동행해요</string>
    <string name="str_request_accompany">동행요청</string>

    <string name="str_help">도와줘요</string>
    <string name="str_request_help">도움요청</string>

    <string name="str_search_hint">검색어 입력</string>
    <string name="str_one_click_intro">음성인식으로 한번에!</string>
    <string name="str_one_click_request">원클릭 요청</string>

    <string name="str_profile">프로필</string>
    <string name="str_current_request">현재 요청</string>
    <string name="str_current_null">현재 요청내역이 없습니다.</string>
    <string name="str_request">함께하기</string>
    <string name="str_process">진행중</string>
    <string name="str_request_history">요청 내역</string>
    <string name="str_show_more">더보기</string>

    <string name="str_certification">신분증 인증</string>
    <string name="str_certification_intro">안전을 위해 처음 동행하기 전\n신분증 인증이 필요합니다</string>
    <string name="str_certification_hint">신분증 사진 첨부</string>
    <string name="str_add_file">파일 첨부</string>
    <string name="str_delete_file">파일 삭제</string>
    
    <string name="str_need_accompany">동행이 필요해요</string>
    <string name="str_need_help">도움이 필요해요</string>
    <string name="str_post_title_hint">타이틀을 적어주세요</string>
    <string name="str_post_date">날짜</string>
    <string name="str_post_today">오늘</string>
    <string name="str_post_time">시간</string>
    <string name="str_post_am">오전</string>
    <string name="str_post_pm">오후</string>
    <string name="str_time_separator">:</string>
    <string name="str_post_duration">소요시간</string>
    <string name="str_post_duration_hint">30분</string>
    <string name="str_post_accompany">동행 경로</string>
    <string name="str_post_departure">출발지</string>
    <string name="str_post_destination">도착지</string>
    <string name="str_post_place">장소</string>
    <string name="str_post_request">요청 사항</string>
    <string name="str_post_request_hint">도움 사항 및 기타 요청, 상세 내역</string>
    
    <style name="str_match_history_done">요청 완료</style>
    <style name="str_match_history_progress">진행중</style>
    <style name="str_match_history_reject">거절됨</style>

    <string name="str_disabled">장애인</string>
    <string name="str_companion">동행자</string>
    <string name="str_related">연관자</string>
    <string name="str_next">다음</string>
    <string name="str_complete">완료</string>
    <string name="str_check_duplication">중복 확인</string>
    <string name="str_logout">로그아웃</string>
    <string name="str_resign">회원탈퇴</string>
    <string name="str_horizontal_divider">|</string>
    <string name="str_accept">수락하기</string>
    <string name="str_with">함께하기</string>
    <string name="str_show_volunteer">지원자 보기</string>

    <string name="str_hello_one_click">안녕하세요.\n원클릭 요청입니다.</string>
    <string name="str_stop">그만하기</string>

    <string name="str_match_ready">요청 중</string>
    <string name="str_match_matching">매칭 완료</string>
    <string name="str_match_progress">동행 시작</string>
    <string name="str_match_done">도착</string>

</resources>