<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="io.mapomi.android.ui.main.profile.ProfileViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="300dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                style="@style/regular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_logout"
                android:onClick="@{v->vm.onLogOut()}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_horizontal_divider"
                android:textColor="@color/grey300"
                android:textSize="15sp"
                android:layout_marginHorizontal="28dp"/>

            <TextView
                style="@style/regular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_resign"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>