<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="36dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textView2"
            style="@style/medium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_current_request"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/cl_grey_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                style="@style/medium12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_current_null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/medium12"
                isSelect="@{true}"
                android:background="@drawable/btn_profile_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_request"
                android:textColor="@color/color_profile_select"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>