<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="io.mapomi.android.ui.auth.register.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/app_padding">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginTop="20dp"
                android:paddingVertical="6dp"
                android:paddingEnd="6dp"
                android:paddingStart="0dp"
                android:onClick="@{v->vm.connect.moveBackPage()}"/>

            <TextView
                style="@style/regular22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ask_info"
                android:layout_marginTop="25dp"/>

            <TextView
                style="@style/medium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_nickname"
                android:layout_marginTop="44dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <EditText
                    style="@style/regular16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/str_nickname_hint"
                    android:paddingVertical="10dp"
                    android:textColorHint="@color/grey500"
                    app:layout_constraintEnd_toStartOf="@+id/btn_check_nickname"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:inputType="text"
                    android:text="@{vm.nickname}"
                    android:onTextChanged="@{(cs,s,e,c) -> vm.typeNickname(cs)}"/>

                <TextView
                    android:id="@+id/btn_check_nickname"
                    style="@style/regular12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_primary_small"
                    android:gravity="center"
                    android:onClick="@{v->vm.checkNickname()}"
                    android:text="@string/str_check_duplication"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey300"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/regular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_nickname_valid"
                android:layout_marginTop="4dp"
                android:visibility="@{vm.nickNameValid ? 0 : 4}"/>

            <TextView
                style="@style/medium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_phone"
                android:layout_marginTop="13dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/et_num"
                    style="@style/regular16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/str_phone_hint"
                    android:paddingVertical="10dp"
                    android:textColorHint="@color/grey500"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:maxLength="11"
                    android:inputType="numberDecimal"
                    android:text="@{vm.phone}"
                    android:onTextChanged="@{(cs,s,e,c) -> vm.typePhone(cs,etNum)}"/>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey300"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="15dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <include
                layout="@layout/view_primary_button"
                bind:buttonText="@{@string/str_next}"
                bind:enabled="@{vm.phone.length()==11 &amp; vm.nickNameValid}"
                bind:onClick="@{v->vm.onNext()}"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>