<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="io.mapomi.android.ui.main.post.write.PostWriteViewModel" />
        <variable
            name="postCont"
            type="io.mapomi.android.constants.PostConstKt" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/app_padding">

                <TextView
                    style="@style/bold22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.postType == postCont.POST_ACCOMPANY ? @string/str_need_accompany : @string/str_need_help}"
                    android:layout_marginTop="24dp"
                    app:drawableEndCompat="@drawable/ic_down"
                    android:drawablePadding="16dp"
                    android:onClick="@{v->vm.openTypeBox()}"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey300"
                    android:layout_marginTop="15dp"/>

                <EditText
                    android:id="@+id/et_title"
                    style="@style/medium16"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:hint="@string/str_post_title_hint"
                    android:textColorHint="@color/grey500"
                    android:gravity="top"
                    android:background="@null"
                    android:paddingVertical="15dp"
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:onTextChanged="@{(cs,s,e,c)->vm.typeTitle(cs,etTitle)}"
                    android:text="@{vm.title}"/>

                <TextView
                    style="@style/medium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_post_date"
                    android:textColor="@color/grey700"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey300"
                    android:layout_marginTop="8dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:adapter="@{vm.adapter}"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey300"
                    android:layout_marginTop="8dp"/>

                <TextView
                    style="@style/medium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_post_time"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grey700"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        style="@style/medium14"
                        android:background="@drawable/btn_post_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_post_am"
                        android:textColor="@color/btn_post_color_select"
                        android:paddingVertical="5dp"
                        android:paddingHorizontal="16dp"
                        android:layout_marginEnd="4dp"
                        isSelect="@{vm.timeState == vm.MORNING}"
                        android:onClick="@{v->vm.changeTimeState(vm.MORNING)}"/>
                    <TextView
                        style="@style/medium14"
                        android:background="@drawable/btn_post_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_post_pm"
                        android:textColor="@color/btn_post_color_select"
                        android:paddingVertical="5dp"
                        android:paddingHorizontal="16dp"
                        isSelect="@{vm.timeState == vm.AFTERNOON}"
                        android:onClick="@{v->vm.changeTimeState(vm.AFTERNOON)}"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="20dp">

                    <EditText
                        style="@style/medium16"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_post_input"
                        isSelect="@{true}"
                        android:gravity="center"
                        android:inputType="time"
                        android:maxLength="2"
                        android:paddingVertical="4dp"
                        android:onTextChanged="@{(cs,s,e,c)->vm.typeHH(cs)}"
                        android:text="@{vm.hh}"/>

                    <TextView
                        style="@style/medium14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_time_separator"
                        android:layout_marginHorizontal="12dp"/>

                    <EditText
                        style="@style/medium16"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_post_input"
                        isSelect="@{true}"
                        android:gravity="center"
                        android:inputType="time"
                        android:maxLength="2"
                        android:paddingVertical="4dp"
                        android:onTextChanged="@{(cs,s,e,c)->vm.typeMM(cs)}"
                        android:text="@{vm.mm}"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:visibility="@{vm.postType == postCont.POST_ACCOMPANY ? 0 : 8}">

                    <TextView
                        style="@style/medium14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_post_accompany"
                        android:textColor="@color/grey700"/>

                    <EditText
                        style="@style/regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_post_input"
                        isSelect="@{true}"
                        android:hint="@string/str_post_departure"
                        android:inputType="text"
                        android:textColorHint="@color/grey500"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="15dp"
                        android:paddingHorizontal="12dp"
                        android:onTextChanged="@{(cs,s,e,c)->vm.typeDeparture(cs)}"
                        android:text="@{vm.departure}"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_place_arrow"
                        android:layout_marginVertical="8dp"/>

                    <EditText
                        style="@style/regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_post_input"
                        isSelect="@{true}"
                        android:hint="@string/str_post_destination"
                        android:inputType="text"
                        android:textColorHint="@color/grey500"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="15dp"
                        android:paddingHorizontal="12dp"
                        android:onTextChanged="@{(cs,s,e,c)->vm.typeDestination(cs)}"
                        android:text="@{vm.destination}"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{vm.postType == postCont.POST_HELP ? 0 : 8}">

                    <TextView
                        style="@style/medium14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_post_place"
                        android:textColor="@color/grey700"/>

                    <EditText
                        style="@style/regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_post_input"
                        isSelect="@{true}"
                        android:hint="@string/str_post_place"
                        android:inputType="text"
                        android:textColorHint="@color/grey500"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="15dp"
                        android:paddingHorizontal="12dp"
                        android:onTextChanged="@{(cs,s,e,c)->vm.typeLocation(cs)}"
                        android:text="@{vm.location}"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey300"
                    android:layout_marginTop="20dp"/>

                <TextView
                    style="@style/medium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_post_request"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/grey700"/>

                <EditText
                    android:id="@+id/et_content"
                    style="@style/medium16"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:hint="@string/str_post_request_hint"
                    android:textColorHint="@color/grey500"
                    android:gravity="top"
                    android:background="@null"
                    android:paddingVertical="15dp"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:maxLength="200"
                    android:onTextChanged="@{(cs,s,e,c)->vm.typeContent(cs, etContent)}"
                    android:text="@{vm.content}"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <include
                        layout="@layout/view_primary_button"
                        app:buttonText="@{@string/str_complete}"
                        app:needSub="@{vm.postType == postCont.POST_HELP}"
                        app:enabled="@{true}"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/app_padding"
            android:paddingVertical="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/cl_post_type"
            android:visibility="@{vm.typeBoxVisible ? 0 : 8}">

            <TextView
                android:id="@+id/textView4"
                style="@style/bold22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:text="@{vm.postType == postCont.POST_ACCOMPANY ? @string/str_need_accompany : @string/str_need_help}"
                app:drawableEndCompat="@drawable/ic_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/str_need_accompany"
                android:onClick="@{v->vm.selectTypeBox(vm.postType)}"/>

            <View
                android:id="@+id/view"
                android:layout_width="178dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                style="@style/bold22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:text="@{vm.postType == postCont.POST_ACCOMPANY ? @string/str_need_help : @string/str_need_accompany}"
                android:textColor="@color/grey500"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:text="@string/str_need_help"
                android:onClick="@{v->vm.selectTypeBox(!vm.postType)}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>